# VERM

./: .gitignore  ErrorCodeReference.md  LICENSE  README.md  config.ini  config.ini.sample  main.py  pyproject.toml  run.bat  setup_env.bat  task_delete.bat  task_register.bat
Const/: Constant.py  __init__.py
Data/: Category.py  Mode.py  Params.py  Payload.py  Platform.py  Visibility.py  __init__.py
GoogleForms/: Controller.py  FormsRequest.py  __init__.py
Utils/: DataParser.py  EventManager.py  Logger.py  __init__.py
VRCAPI/: CookieManager.py  LoginRequest.py  RequestRegistration.py  __init__.py
tests/: test_builder.py  test_params.py
utils/: __init__.py  auto_registration.py  builder.py  configure.py  logger.py  params.py
utils/vrc/: __init__.py  cookie_manager.py  vrc_login.py
