[project]
name = "verm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
    "selenium>=4.39.0",
    "vrchatapi>=1.20.7",
    "webdriver-manager>=4.0.2",
]

[tool.setuptools.packages.find]
include = [
    "Data*",
    "Const*",
    "Utils*",
    "VRCAPI*",
    "GoogleForms*"
]
